Add edit and delete functionality for recipes. Move recipe creation into modal.
