# DataContracts/Recipes/UpdateRecipeRequest.cs
@@ -1,0 +1,5 @@
+﻿using DataContracts.Common.Enums;
+
+namespace DataContracts.Recipes;
+
+public sealed record UpdateRecipeRequest(string Name, Category Category, EffortLevel EffortLevel);
